--- a/Cap13/Projeto2-Perguntas.ipynb
+++ b/Cap13/Projeto2-Perguntas.ipynb
@@ -19,7 +19,7 @@
    "id": "da367ec2",
    "metadata": {},
    "source": [
-    "![DSA](imagens/projeto2.png)"
+    "![DSA](Cap13/imagens/Projeto2.png)"
    ]
   },
   {
