--- a/Cap10/DSA-Python-Cap10-Pandas.ipynb
+++ b/Cap10/DSA-Python-Cap10-Pandas.ipynb
@@ -1743,7 +1743,7 @@
    "outputs": [],
    "source": [
     "# Primeiro importamos um dataset\n",
-    "dsa_df = pd.read_csv(\"dataset.csv\")"
+    "dsa_df = pd.read_csv(\"https://raw.githubusercontent.com/plajuan/DSA_Python/main/Cap10/dataset.csv\")"
    ]
   },
   {
