--- a/Cap13/Projeto2-Respostas.ipynb
+++ b/Cap13/Projeto2-Respostas.ipynb
@@ -73,7 +73,7 @@
    "outputs": [],
    "source": [
     "# Carrega o dataset\n",
-    "df_dsa = pd.read_csv('dados/dataset.csv')"
+    "df_dsa = pd.read_csv('https://raw.githubusercontent.com/plajuan/DSA_Python/main/Cap13/dados/dataset.csv')"
    ]
   },
   {
